--- a/a.html
+++ b/a.html
@@ -8,14 +8,18 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>    
     <script src='script/notify.js'></script>
-    <script src='script/get.js'></script>
+    <script type="module" src='script/get.js'></script>
     <script src="https://kit.fontawesome.com/f0ac6751a1.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
 <body>
 	<main>
-		<h1>Redirecionamento em: <span class="time">5</span> segundos</h1>
+		<h1>Redirecionamento em: <span class="time">5</span> segundos</h1><br/>        
+        <div>
+            <a class="linkedin" href="https://www.linkedin.com/in/christiandevallan/" target="_blank" style="text-decoration: none; color: antiquewhite;"><i class="fa-brands fa-linkedin"></i></a>        
+            <a class="github" href="https://github.com/TheKing-CODE" target="_blank" style="text-decoration: none; color: antiquewhite;"><i class="fa-brands fa-square-github"></i></a>
+        </div>
 	</main>
 </body>
 </html>
